Fix: Use body padding for keyboard spacing
- Added padding-bottom: 240px to body element
- Removed margin approach that wasn't working
- Provides global bottom spacing for keyboard area

--- a/src/app/config/config.page.scss
+++ b/src/app/config/config.page.scss
@@ -73,9 +73,12 @@
   }
 }
 
+body {
+  padding-bottom: 240px;
+}
+
 ion-content {
   --background: var(--background);
-  margin-bottom: 240px;
   
   &.keyboard-visible {
     margin-bottom: 240px;
